--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Favorite Quotes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-list *ngFor="let quote of quotes">
+    <ion-card  class="ion-padding">
+      <ion-card-content>
+        <p>
+          {{quote.text}}
+        </p>
+      </ion-card-content>
+          <div>
+            <p class="ion-text-end quote-person" >-{{quote.person}}</p>
+          </div>
+          <div class="ion-text-center" >
+            <ion-button (click)="onRemoveQuoteFromFavorite(quote)" fill="clear" color="danger">Unfavorite</ion-button>
+          </div>
+
+    </ion-card>
+  </ion-list>
+
+
 </ion-content>
